--- a/projects/web/src/app/admin/users/lock/lock.component.html
+++ b/projects/web/src/app/admin/users/lock/lock.component.html
@@ -1,13 +1,13 @@
-<nz-card *ngIf="(account.info | async) as info"
-  class="ant-card-data-detail m-0"
-  [nzTitle]="title" [nzExtra]="toolsTpl">
+@let user = account.currentUser();
+<nz-card class="ant-card-data-detail m-0" [nzTitle]="title" [nzExtra]="toolsTpl">
   <ng-template #toolsTpl>
     <nz-button-group>
-      <button *ngIf="info.privileges['app_users.lock']"
-        type="button" type="button" nz-button nzType="primary"
-        [disabled]="!lockForm.valid" (click)="save()">
-        <svg-icon class="me-1" iconPath="bi/check" /> 保存
-      </button>
+      @if (user.privileges['app_users.lock']) {
+        <button type="button" type="button" nz-button nzType="primary"
+          [disabled]="!lockForm.valid" (click)="save()">
+          <svg-icon class="me-1" iconPath="bi/check" /> 保存
+        </button>
+      }
       <button type="button" nz-button nzType="default" (click)="cancel()">
         <svg-icon class="me-1" iconPath="bi/x" /> 取消
       </button>
