--- a/projects/web/src/app/admin/storages/detail/detail.component.html
+++ b/projects/web/src/app/admin/storages/detail/detail.component.html
@@ -1,14 +1,14 @@
-<nz-card *ngIf="(account.info | async) as info"
-  class="ant-card-data-detail m-0"
-  [nzTitle]="title" [nzExtra]="toolsTpl"
+@let user = account.currentUser();
+<nz-card class="ant-card-data-detail m-0" [nzTitle]="title" [nzExtra]="toolsTpl"
   [nzActions]="editable ? [okTpl, cancelTpl] : []">
   <ng-template #toolsTpl>
     <nz-button-group>
-      <button *ngIf="info.privileges['app_storages.update'] && editable"
-        type="button" nz-button nzType="primary"
-        (click)="save()" [disabled]="!detailForm.valid">
-        <svg-icon class="me-1" iconPath="bi/check" /> 保存
-      </button>
+      @if (user.privileges['app_storages.update'] && editable) {
+        <button type="button" nz-button nzType="primary"
+          (click)="save()" [disabled]="!detailForm.valid">
+          <svg-icon class="me-1" iconPath="bi/check" /> 保存
+        </button>
+      }
       <button type="button" nz-button nzType="default" (click)="cancel()">
         <svg-icon class="me-1" iconPath="bi/x" /> 取消
       </button>
@@ -46,26 +46,27 @@
     <nz-form-item>
       <nz-form-label nzFor="roles">允许的的角色</nz-form-label>
       <nz-form-control>
-        <label *ngFor="let role of vm.roles" class="m-0"
-          nz-checkbox [nzId]="role.id" [for]="role.id"
-          [nzDisabled]="!editable" [nzValue]="role.name"
-          [nzChecked]="isRoleChecked(role.name)"
-          (nzCheckedChange)="toggleCheckedRole(role.name)">
-          {{role.description}}
-        </label>
+        @for (role of vm.roles; track role.id) {
+          <label class="m-0" [for]="role.id" nz-checkbox
+            [nzDisabled]="!editable" [nzValue]="role.name"
+            [nzChecked]="isRoleChecked(role.name)"
+            (nzCheckedChange)="toggleCheckedRole(role.name)">
+            {{role.description}}
+          </label>
+        }
       </nz-form-control>
     </nz-form-item>
   </form>
   <ng-template #okTpl>
-    <button *ngIf="info.privileges['app_storages.update'] && editable"
-      class="float-start ms-4" type="button" nz-button nzType="primary"
-      (click)="save()" [disabled]="!detailForm.valid">
-      <svg-icon class="me-1" iconPath="bi/check" /> 保存
-    </button>
+    @if (user.privileges['app_storages.update'] && editable) {
+      <button class="float-start ms-4" type="button" nz-button nzType="primary"
+        (click)="save()" [disabled]="!detailForm.valid">
+        <svg-icon class="me-1" iconPath="bi/check" /> 保存
+      </button>
+    }
   </ng-template>
   <ng-template #cancelTpl>
-    <button class="float-end me-4" type="button" nz-button nzType="default"
-      (click)="cancel()">
+    <button class="float-end me-4" type="button" nz-button nzType="default" (click)="cancel()">
       <svg-icon class="me-1" iconPath="bi/x" /> 取消
     </button>
   </ng-template>
