--- a/projects/web/src/app/admin/users/list/list.component.html
+++ b/projects/web/src/app/admin/users/list/list.component.html
@@ -1,21 +1,20 @@
+@let info = account.currentUser();
 <div class="container-fluid">
   <div class="row g-2">
     <div class="col-2">
       <nz-card nzTitle="组织单元" [nzExtra]="orgUnitExtraTpl" [nzBodyStyle]="{ padding: '0.25rem' }">
         <ng-template #orgUnitExtraTpl>
-          <button class="px-2" type="button" nz-button nzType="default"
-            (click)="loadOrganizeUnit()">
+          <button class="px-2" type="button" nz-button nzType="default" (click)="loadOrganizeUnit()">
             <svg-icon iconPath="bi/arrow-repeat" />
           </button>
         </ng-template>
-        <ng-container *ngIf="(organizeUnitSvc.treeNodes | async) as treeNodes">
+        @if (organizeUnitSvc.treeNodes | async; as treeNodes) {
           <nz-tree class="organize-unit-tree" [nzData]="treeNodes" (nzClick)="onOrganizeUnitClick($event)"></nz-tree>
-        </ng-container>
+        }
       </nz-card>
     </div>
     <div class="col">
-      <nz-card *ngIf="(account.info | async) as info"
-        class="ant-card-data-list" nzTitle="用户" [nzExtra]="cardExtraTpl">
+      <nz-card class="ant-card-data-list" nzTitle="用户" [nzExtra]="cardExtraTpl">
         <ng-template #cardExtraTpl>
           <form nz-form>
             <nz-space>
@@ -26,11 +25,12 @@
                   (keyup.enter)="loadData({})"
                 />
                 <ng-template #userNameAddOnTpl>
-                  <button *ngIf="vm.searchModel.userName"
-                    class="px-2" type="button" nz-button nzType="default"
-                    (click)="cleanUserSearch()">
-                    <svg-icon iconPath="bi/x" />
-                  </button>
+                  @if (vm.searchModel.userName) {
+                    <button class="px-2" type="button" nz-button nzType="default"
+                      (click)="cleanUserSearch()">
+                      <svg-icon iconPath="bi/x" />
+                    </button>
+                  }
                   <button class="px-2" type="button" nz-button nzType="default" nzSearch (click)="vm.search()">
                     <svg-icon iconPath="bi/search" />
                   </button>
@@ -39,23 +39,26 @@
               <nz-select *nzSpaceItem name="roleName" style="width: 160px;"
                 [(ngModel)]="vm.searchModel.roleName" (ngModelChange)="research()">
                 <nz-option nzValue="" nzLabel="全部用户"></nz-option>
-                <nz-option *ngFor="let r of vm.roles | async"
-                  [nzValue]="r.name"
-                  [nzLabel]="r.description || r.name + '(' + r.userCount + ')'">
-                </nz-option>
+                @for (r of vm.roles | async; track r.name) {
+                  <nz-option [nzValue]="r.name"
+                    [nzLabel]="r.description || r.name + '(' + r.userCount + ')'">
+                  </nz-option>
+                }
               </nz-select>
               <nz-select *nzSpaceItem name="sortBy" [(ngModel)]="vm.searchModel.sortBy"
                 (ngModelChange)="loadData({})">
-                <nz-option *ngFor="let sm of vm.sortMethods"
-                  [nzValue]="sm.value" [nzLabel]="sm.text">
-                </nz-option>
+                @for (sm of vm.sortMethods; track sm.value) {
+                  <nz-option [nzValue]="sm.value" [nzLabel]="sm.text">
+                  </nz-option>
+                }
               </nz-select>
               <nz-button-group *nzSpaceItem>
-                <button *ngIf="info.privileges['app_users.create']"
-                  type="button" nz-button nzType="primary"
-                  (click)="showDetail('0', true)">
-                  <svg-icon class="me-1" iconPath="bi/plus" /> 新建用户
-                </button>
+                @if (info.privileges['app_users.create']) {
+                  <button type="button" nz-button nzType="primary"
+                    (click)="showDetail('0', true)">
+                    <svg-icon class="me-1" iconPath="bi/plus" /> 新建用户
+                  </button>
+                }
                 <button type="button" nz-button nzType="default" (click)="loadData({})">
                   <svg-icon class="me-1" iconPath="bi/arrow-repeat" /> 刷新
                 </button>
@@ -63,7 +66,8 @@
             </nz-space>
           </form>
         </ng-template>
-        <ng-container *ngIf="(vm.data | async) as data">
+        @let data = (vm.data | async)!;
+        <ng-container>
           <nz-table nzSize="small" [nzFrontPagination]="false"
             [nzShowSizeChanger]="true"
             [nzShowPagination]="true"
@@ -89,7 +93,8 @@
               </tr>
             </thead>
             <tbody>
-              <tr *ngFor="let item of data; let i = index;">
+              @for (item of data; track item.id; let i = $index;) {
+              <tr>
                 <th scope="row" class="text-end">{{i + 1}}</th>
                 <td class="text-center">{{item.organizeUnit?.name}}</td>
                 <td class="text-start">
@@ -109,52 +114,62 @@
                 <td class="text-end">{{item.loginCount}}</td>
                 <td class="text-center">
                   <nz-button-group>
-                    <button *ngIf="info.privileges['app_users.read_by_id']"
-                      class="px-2" type="button" nz-button nzType="default"
-                      nz-tooltip="详情" nzTooltipPlacement="top"
-                      (click)="showDetail(item.id, false)">
-                      <svg-icon iconPath="bi/info-square" />
-                    </button>
-                    <button *ngIf="canViewGears()"
-                      class="px-2" type="button" nz-button nzType="default"
-                      nz-tooltip="更多操作" nzTooltipPlacement="top"
-                      nz-dropdown nzTrigger="click" [nzDropdownMenu]="userMenuTpl">
-                      <svg-icon iconPath="bi/three-dots" />
-                    </button>
+                    @if (info.privileges['app_users.read_by_id']) {
+                      <button class="px-2" type="button" nz-button nzType="default"
+                        nz-tooltip="详情" nzTooltipPlacement="top"
+                        (click)="showDetail(item.id, false)">
+                        <svg-icon iconPath="bi/info-square" />
+                      </button>
+                    }
+                    @if (canViewGears()) {
+                      <button class="px-2" type="button" nz-button nzType="default"
+                        nz-tooltip="更多操作" nzTooltipPlacement="top"
+                        nz-dropdown nzTrigger="click" [nzDropdownMenu]="userMenuTpl">
+                        <svg-icon iconPath="bi/three-dots" />
+                      </button>
+                    }
                     <nz-dropdown-menu #userMenuTpl="nzDropdownMenu">
                       <div nz-menu>
-                        <li nz-menu-item *ngIf="info.privileges['app_users.update']"
-                          (click)="showDetail(item.id, true)">
-                          <svg-icon class="me-2" iconPath="bi/pencil-square" /> 编辑
-                        </li>
-                        @if (isLockout(item)) {
-                          <li nz-menu-item *ngIf="info.privileges['app_users.unlock']"
-                            (click)="vm.unlockUser(item.id)">
-                            <svg-icon class="me-2" iconPath="bi/unlock" /> 解锁
-                          </li>
-                        } @else {
-                          <li nz-menu-item *ngIf="info.privileges['app_users.lock']"
-                            (click)="showLock(item)">
-                            <svg-icon class="me-2" iconPath="bi/lock" /> 锁定
+                        @if (info.privileges['app_users.update']) {
+                          <li nz-menu-item (click)="showDetail(item.id, true)">
+                            <svg-icon class="me-2" iconPath="bi/pencil-square" /> 编辑
                           </li>
                         }
-                        <li nz-menu-item *ngIf="info.privileges['app_users.reset_pass']"
-                          (click)="showPassword(item)">
-                          <svg-icon class="me-2" iconPath="bi/key" /> 重置密码
-                        </li>
-                        <li nz-menu-item *ngIf="info.privileges['app_users.read_user_roles']"
-                          (click)="showRoles(item)">
-                          <svg-icon class="me-2" iconPath="bi/shield-check" /> 角色
-                        </li>
-                        <li nz-menu-item *ngIf="info.privileges['app_users.delete']"
-                          (click)="delete(item.id)">
-                          <svg-icon class="me-2" iconPath="bi/trash" /> 删除
-                        </li>
+                        @if (isLockout(item)) {
+                          @if (info.privileges['app_users.unlock']) {
+                              <li nz-menu-item (click)="vm.unlockUser(item.id)">
+                                <svg-icon class="me-2" iconPath="bi/unlock" /> 解锁
+                            </li>
+                          }
+                        }
+                        @else {
+                          @if (info.privileges['app_users.lock']) {
+                            <li nz-menu-item (click)="showLock(item)">
+                              <svg-icon class="me-2" iconPath="bi/lock" /> 锁定
+                            </li>
+                          }
+                        }
+                        @if (info.privileges['app_users.reset_pass']) {
+                          <li nz-menu-item (click)="showPassword(item)">
+                            <svg-icon class="me-2" iconPath="bi/key" /> 重置密码
+                          </li>
+                        }
+                        @if (info.privileges['app_users.read_user_roles']) {
+                          <li nz-menu-item (click)="showRoles(item)">
+                            <svg-icon class="me-2" iconPath="bi/shield-check" /> 角色
+                          </li>
+                        }
+                        @if (info.privileges['app_users.delete']) {
+                          <li nz-menu-item (click)="delete(item.id)">
+                            <svg-icon class="me-2" iconPath="bi/trash" /> 删除
+                          </li>
+                        }
                       </div>
                     </nz-dropdown-menu>
                   </nz-button-group>
                 </td>
               </tr>
+            }
             </tbody>
           </nz-table>
         </ng-container>
