--- a/projects/web/src/app/common/storage-browser/storage-browser.component.html
+++ b/projects/web/src/app/common/storage-browser/storage-browser.component.html
@@ -7,11 +7,12 @@
           (click)="getFolderContentByPath('.')">
           <svg-icon class="me-1" iconPath="bi/house" /> {{params.alias}}
         </button>
-        <button *ngFor="let bc of breadcrumbs"
-          type="button" nz-button nzType="default" nzSize="small"
-          (click)="getFolderContentByPath(bc.path)">
-          {{bc.name}}
-        </button>
+        @for (bc of breadcrumbs; track bc.name) {
+          <button type="button" nz-button nzType="default" nzSize="small"
+            (click)="getFolderContentByPath(bc.path)">
+            {{bc.name}}
+          </button>
+        }
       </nz-button-group>
     </div>
   </ng-template>
@@ -21,12 +22,10 @@
         <input nz-input type="text" placeholder="搜索..." (keyup)="search($event)" />
       </nz-input-group>
       <nz-button-group *nzSpaceItem>
-        <button type="button" nz-button nzType="primary"
-          (click)="ok()">
+        <button type="button" nz-button nzType="primary" (click)="ok()">
           <svg-icon class="me-1" iconPath="bi/check" /> 确定
         </button>
-        <button type="button" nz-button nzType="default"
-          (click)="cancel()">
+        <button type="button" nz-button nzType="default" (click)="cancel()">
           <svg-icon class="me-1" iconPath="bi/x" /> 取消
         </button>
       </nz-button-group>
@@ -34,10 +33,9 @@
   </ng-template>
   <cdk-virtual-scroll-viewport class="scroll-viewport" [itemSize]="15">
     <div class="rounded p-4 m-2 folder-item text-center d-inline-block border"
-      *cdkVirtualFor="let item of filteredItems"
+      *cdkVirtualFor="let item of filteredItems" [nz-tooltip]="item.name"
       [ngClass]="{ 'border-primary': item.name === selectedItem?.name }"
-      [nz-tooltip]="item.name"
-      (dblclick)="getFolderContent(item)" (click)="setSelectedItem(item)">
+      (click)="setSelectedItem(item)" (dblclick)="getFolderContent(item)">
       <div [class]="getFolderItemClass(item)">
         <svg-icon [iconPath]="getFolderItemIconPath(item)" iconClass="bi bi-2x" />
       </div>
