--- a/projects/handset/src/app/login/login/login.component.html
+++ b/projects/handset/src/app/login/login/login.component.html
@@ -37,7 +37,9 @@
           (click)="login()" [disabled]="(username.invalid || password.invalid)"
           cdkFocusInitial>
           @if (loading) {
-            <mat-icon class="mat-icon-spinner">refresh</mat-icon> 登录中 ...
+            <ng-container>
+              <mat-icon class="mat-icon-spinner">refresh</mat-icon> 登录中 ...
+            </ng-container>
           }
           @else {
             登录
