--- a/projects/web/src/app/admin/users/detail/detail.component.html
+++ b/projects/web/src/app/admin/users/detail/detail.component.html
@@ -14,7 +14,7 @@
       </button>
     </nz-button-group>
   </ng-template>
-  <form class="card-body" nz-form nzLayout="vertical" #detailForm="ngForm">
+  <form nz-form nzLayout="vertical" #detailForm="ngForm">
     <div class="row">
       <div class="col">
         <nz-form-item>
