--- a/projects/handset/src/app/nav-menu/nav-menu.component.html
+++ b/projects/handset/src/app/nav-menu/nav-menu.component.html
@@ -1,7 +1,7 @@
 <mat-list>
   <mat-list-item class="d-flex align-items-start">
     <img matListItemAvatar src="./assets/user.png" alt="User" />
-    <div matListItemTitle [matMenuTriggerFor]="userMenu">{{(accountSvc.info | async)?.userName}}</div>
+    <div matListItemTitle [matMenuTriggerFor]="userMenu">{{account.current().userName}}</div>
     <button matListItemMeta mat-icon-button (click)="toggleDrawer()">
       <mat-icon>chevron_left</mat-icon>
     </button>
