--- a/projects/web/src/app/admin/nav-items/list/list.component.html
+++ b/projects/web/src/app/admin/nav-items/list/list.component.html
@@ -1,4 +1,4 @@
-@let user = account.currentUser();
+@let user = account.current();
 <div class="container-fluid">
   <div class="row">
     <div class="col">
