--- a/projects/web/src/app/admin/users/list/list.component.html
+++ b/projects/web/src/app/admin/users/list/list.component.html
@@ -1,4 +1,4 @@
-@let info = account.currentUser();
+@let info = account.current();
 <div class="container-fluid">
   <div class="row g-2">
     <div class="col-2">
