--- a/projects/web/src/app/admin/roles/detail/detail.component.html
+++ b/projects/web/src/app/admin/roles/detail/detail.component.html
@@ -1,4 +1,4 @@
-@let user = account.currentUser();
+@let user = account.current();
 <nz-card class="ant-card-data-detail m-0" [nzTitle]="title" [nzExtra]="toolsTpl"
   [nzActions]="editable ? [okTpl, cancelTpl] : []" >
   <ng-template #toolsTpl>
