--- a/projects/web/src/app/admin/users/password/password.component.html
+++ b/projects/web/src/app/admin/users/password/password.component.html
@@ -1,4 +1,4 @@
-@let user = account.currentUser();
+@let user = account.current();
 <nz-card class="ant-card-data-detail m-0" [nzTitle]="title" [nzExtra]="toolsTpl">
   <ng-template #toolsTpl>
     <nz-button-group>
